<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity10"
    android:background="#FDFDFD">

    <TextView
        android:id="@+id/t1"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textSize="25dp"
        android:text="My Profile"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/edit"
        android:layout_width="25dp"
        android:layout_height="20dp"
        android:src="@drawable/pencil"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="25dp"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/img3"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/t1"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:text="Olivia Daniel"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/image"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/vm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="two bananas for a pound, three bananas for a euro"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_below="@+id/name"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:id="@+id/posts_count2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vm"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:gravity="center">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/posts_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="7"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="posts"/>

    </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/followers_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="410"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="followers"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/following_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="387"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="following"/>
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:layout_below="@+id/posts_count2"
        android:layout_above="@+id/home">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:columnCount="3"
                android:rowCount="3">

                <ImageView
                    android:id="@+id/image1"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_columnWeight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pic1"/>

                <ImageView
                    android:id="@+id/image2"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_columnWeight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pic2"/>

                <ImageView
                    android:id="@+id/image3"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_columnWeight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pic3"/>

                <ImageView
                    android:id="@+id/image4"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_columnWeight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pic4"/>

                <ImageView
                    android:id="@+id/image5"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_columnWeight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pic5"/>

                <ImageView
                    android:id="@+id/image6"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_columnWeight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pic6"/>

                <ImageView
                    android:id="@+id/image7"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_columnWeight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pic8"/>

            </GridLayout>

        </LinearLayout>

    </ScrollView>


    <LinearLayout
        android:id="@+id/home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/homeicon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/home" />

            <TextView
                android:id="@+id/hometext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Home"
                android:textSize="12sp"
                android:textColor="@color/black"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/searchicon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/search" />

            <TextView
                android:id="@+id/searchtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Search"
                android:textSize="12sp"
                android:textColor="@color/black"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/addicon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/add"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/profileicon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/user1" />

            <TextView
                android:id="@+id/profiletext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Profile"
                android:textSize="12sp"
                android:textColor="@color/black"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/contactsicon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/contacts" />

            <TextView
                android:id="@+id/contactstext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Contacts"
                android:textSize="12sp"
                android:textColor="@color/black"/>
        </LinearLayout>

    </LinearLayout>







</RelativeLayout>