...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity11"
    android:background="#FDFDFD">

    <RelativeLayout
        android:id="@+id/top1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/backwardarrow"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"/>

...
            android:textStyle="bold"/>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top1"
        android:layout_marginTop="5dp">

        <TextView
...
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:gravity="center" />

        <TextView
            android:id="@+id/requests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="387 Following"
            android:layout_marginEnd="30dp"
            android:textSize="20dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_alignParentEnd="true"/>

...
