<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity15"
    android:orientation="vertical"
    android:background="#FDFDFD">

    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">

        <ImageView
            android:id="@+id/closeIcon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/close"
            android:layout_marginTop="2dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Post"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Next"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="#58432E"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:src="@drawable/pic3"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Recents"
        android:textSize="15dp"
        android:textStyle="bold"/>

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/arrow"/>

        <View
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/copy"
            android:layout_marginRight="10dp"/>

       <ImageView
           android:id="@+id/cameraIcon"
           android:layout_width="20dp"
           android:layout_height="20dp"
           android:src="@drawable/camera"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:columnCount="4"
                android:rowCount="4">

                <ImageView
                    android:id="@+id/image1"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_columnWeight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pic1"/>

                <ImageView
                    android:id="@+id/image2"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_columnWeight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pic2"/>

                <ImageView
                    android:id="@+id/image3"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_columnWeight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pic3"/>

                <ImageView
                    android:id="@+id/image4"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_columnWeight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pic4"/>

                <ImageView
                    android:id="@+id/image5"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_columnWeight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pic5"/>

                <ImageView
                    android:id="@+id/image6"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_columnWeight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pic6"/>

                <ImageView
                    android:id="@+id/image7"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_columnWeight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pic8"/>

                <ImageView
                    android:id="@+id/image8"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_columnWeight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pic9"/>

                <ImageView
                    android:id="@+id/image10"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_columnWeight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pic10"/>

                <ImageView
                    android:id="@+id/image11"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_columnWeight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pic3"/>

            </GridLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>