...
        android:layout_marginTop="20dp"
        android:textSize="25dp"
        android:text="Edit Profile"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="Done"
        android:textColor="#58432E"
        android:textStyle="bold"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="25dp"/>

...
